Fixed plugins page dark mode

--- a/src/styles/plugin-page.module.scss
+++ b/src/styles/plugin-page.module.scss
@@ -292,7 +292,7 @@ html[class*="dark"], html[id*="dark"] {
     .pluginsPageContainer {
         background-color: #36393f;
         .contentWrapper {
-            .library {
+            .dependency {
                 background-color: #2f3136;
                 border-bottom: 2px solid #222327;
                 .Lh2 {
